# alx_travel_app

./: .env.example  .gitignore  pyproject.toml  requirements.txt
alx_travel_app/: settings.py  urls.py
alx_travel_app/alx_travel_app/listings/: views.py
