[project]
name = "alx-travel-app"
version = "0.1.0"
description = "A Django-based travel listing platform"
authors = [
    {name = "Moussa Hassana",email = "moussahassana42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
